k8s/app-layer/agent-guardian.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-aiops-agent
  namespace: default
  labels:
    app: agent-guardian
    app.kubernetes.io/name: atlas-aiops-agent
    app.kubernetes.io/part-of: atlas-aiops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent-guardian
  template:
    metadata:
      labels:
        app: agent-guardian
        app.kubernetes.io/name: atlas-aiops-agent
        app.kubernetes.io/part-of: atlas-aiops
    spec:
      serviceAccountName: atlas-aiops-sa
      containers:
        - name: agent-guardian
          image: atlas/agent-guardian:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-aiops-service
  namespace: default
  labels:
    app: agent-guardian
spec:
  selector:
    app: agent-guardian # Deve corrispondere alle label del Deployment
  ports:
    - protocol: TCP
      port: 8000       # La porta su cui Kubernetes espone il servizio
      targetPort: 8000 # La porta su cui è in ascolto il codice Python/FastAPI del tuo collega
  type: ClusterIP
