k8s/app-layer/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/part-of: fraud-detection
    app.kubernetes.io/component: compute-layer
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api-gateway
  ports:
    - name: http
      port: 8000
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: enrichment-system
  labels:
    app.kubernetes.io/name: enrichment-system
    app.kubernetes.io/part-of: fraud-detection
    app.kubernetes.io/component: compute-layer
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: enrichment-system
  ports:
    - name: health
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: scoring-system
  labels:
    app.kubernetes.io/name: scoring-system
    app.kubernetes.io/part-of: fraud-detection
    app.kubernetes.io/component: compute-layer
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: scoring-system
  ports:
    - name: health
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: notification-system
  labels:
    app.kubernetes.io/name: notification-system
    app.kubernetes.io/part-of: fraud-detection
    app.kubernetes.io/component: compute-layer
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: notification-system
  ports:
    - name: health
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: locust-master-ui
  labels:
    app.kubernetes.io/name: locust-master
    app.kubernetes.io/part-of: fraud-detection
    app.kubernetes.io/component: compute-layer
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: locust-master
  ports:
    - name: web-ui
      port: 8089
      targetPort: 8089
---
apiVersion: v1
kind: Service
metadata:
  name: locust-master
  labels:
    app.kubernetes.io/name: locust-master
    app.kubernetes.io/part-of: fraud-detection
    app.kubernetes.io/component: compute-layer
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: locust-master
  ports:
    - name: worker-comm
      port: 5557
      targetPort: 5557
