k8s/app-layer/homebanking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebanking-ui
  labels:
    app: homebanking-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homebanking-ui
  template:
    metadata:
      labels:
        app: homebanking-ui
    spec:
      containers:
        - name: frontend
          image: atlas/homebanking-mockup:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: homebanking-ui-svc
spec:
  selector:
    app: homebanking-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homebanking-ui-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: homebanking.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homebanking-ui-svc
                port:
                  number: 80
