k8s/app-layer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  labels:
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/part-of: fraud-detection
    app.kubernetes.io/component: compute-layer
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "5m"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
spec:
  ingressClassName: nginx
  rules:
    - host: fraud-api.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locust-ui-ingress
  labels:
    app.kubernetes.io/name: locust-master-ui
    app.kubernetes.io/part-of: fraud-detection
    app.kubernetes.io/component: compute-layer
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "5m"
spec:
  ingressClassName: nginx
  rules:
    - host: locust.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: locust-master-ui
                port:
                  number: 8089
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlas-guardian-dashboard-ingress
  labels:
    app.kubernetes.io/name: atlas-guardian-agent
    app.kubernetes.io/part-of: atlas-guardian
    app.kubernetes.io/component: dashboard
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: guardian-report.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atlas-guardian-dashboard-service
                port:
                  number: 8501
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-system-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    # Se il tuo backend non supporta WSS (SSL) internamente
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: notifications.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notification-system
                port:
                  number: 8080 # Assicurati che sia la porta corretta del servizio
