k8s/app-layer/locust-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locust-ingress
  labels:
    app.kubernetes.io/name: locust-master
    app.kubernetes.io/part-of: fraud-detection
    app.kubernetes.io/component: compute-layer
spec:
  ingressClassName: nginx
  rules:
    - host: locust.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: locust-master-ui
                port:
                  number: 8089
